# pifbip

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
demo/: demo.tape  restore.sh
src/: files.rs  main.rs  preview.rs  prompt.rs  viewer.rs
src/pifbip/: cli.py  preview.py  prompt.py
