[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pifbip"
version = "0.1.0"
description = "Put In Folder By Interactive Prompt — fast manual file sorting with preview and autocomplete"
requires-python = ">=3.9"
dependencies = [
    "prompt_toolkit>=3.0",
]

[project.scripts]
pifbip = "pifbip.cli:main"
